# pyhsiclasso

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  debug.py  debugging_dataframe_input-Copy1.ipynb  debugging_dataframe_input.ipynb  mypy.ini  noxfile.py  pyproject.toml  ruff.toml  setup.cfg
example/: sample.py  sample_covars.py  sample_heatmap.py  sample_multi_variate_output.py  sample_multicore.py
src/pyHSICLasso/: input_data.py
src/pyhsiclasso/: __init__.py  api.py  hsic_lasso.py  input_data.py  kernel_tools.py  logging.py  nlars.py  plot_figure.py
tests/: conftest.py  test_classification.py  test_input.py  test_input_data.py  test_regression.py
tests/test_data/: matlab_data.mat  vsc_exprs.csv:Zone.Identifier
