[tool.poetry]
name = "pyhsiclasso"
version = "1.5.0"
description = "Supervised, nonlinear feature selection method for high-dimensional datasets."
authors = ["Makoto Yamada <makoto.yamada@riken.jp>"]
license = "MIT"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
homepage = "http://www.makotoyamada-ml.com/hsiclasso.html"
keywords = [
    "HSIC",
    "Lasso",
    "feature-selection",
    "feature-extraction",
    "machine-learning"
]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
pandas = "^1.3.3"
pytest = "^6.2.5"
scipy = "^1.7.1"
six = "^1.16.0"
seaborn = "^0.11.2"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
mypy = "^0.910"
pytest = "*"
pytest-runner = "*"
nox = "^2021.10.1"
jupyterlab = "^3.1.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
