[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Makoto Yamada", email = "makoto.yamada@riken.jp"},
]
license = {text = "MIT"}
requires-python = ">=3.11"

name = "pyhsiclasso"
version = "1.13.0"
description = "Supervised, nonlinear feature selection method for high-dimensional datasets."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
keywords = [
    "HSIC",
    "Lasso",
    "feature-selection",
    "feature-extraction",
    "machine-learning",
]
dependencies = [
    "pandas>=2.2.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "joblib>=1.4.2",
    "pyarrow>=17.0.0",
    "loguru>=0.7.2",
    "rich>=13.7.1",
]

[project.urls]
homepage = "http://www.makotoyamada-ml.com/hsiclasso.html"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nox>=2024.4.15",
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "nox>=2024.4.15",
    "pre-commit>=3.8.0",
    "pytest-xdist>=3.6.1",
    "pytest-random-order>=1.1.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.1",
    "coverage>=7.6.1",
    "pandas-stubs>=2.2.2.240807",
]


[tool.pdm.build]
excludes = ["*.tests", "*.tests.*", "tests.*", "tests"]